--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="blue code tunnel.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="Profile Pic 2020.jpg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">SPAZZZ Test</p>
-					<p class="text-title-company">Test Title</p>
-					<p class="text-title-company">Test Division, Test Company</p>
+					<p class="text-name">Alec Newbowers</p>
+					<p class="text-title-company">Independent Insurance Agent</p>
+					<p class="text-title-company">Family Heritage Division, Globe Life</p>
 				</div>
 				<div class="col">
-					<img src="blue world code.jpg" alt="Company Logo">
+					<img src="FHL Blue Logo.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:spazzzgame1@gmail.com">
+		<a href="mailto:ajnewbowers@gmail.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">spazzzgame1@gmail.com</p>
+						<p class="text-detail">ajnewbowers@gmail.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:5071234567">
+		<a href="tel:5076763943">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(507) 123 4567</p>
+						<p class="text-detail">(507) 676-3943</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://github.com/spazzz666">
+		<a href="https://www.globelifefamilyheritage.com/">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">github.com/spazzz666</p>
+						<p class="text-detail">globelifefamilyheritage.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/Owatonna,+MN+55060/@44.0841168,-93.2280938,63m/data=!3m1!1e3!4m5!3m4!1s0x87f6e64460fe90e3:0x16bca3037e40803b!8m2!3d44.0855572!4d-93.2259349">
+		<a href="https://www.google.com/maps/place/504+E+Academy+St,+Owatonna,+MN+55060/@44.0817073,-93.2179275,17z/data=!3m1!4b1!4m5!3m4!1s0x87f6e707aaeb3bb1:0xfa3c5ebb6facc2f0!8m2!3d44.0817035!4d-93.2157335">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">145 W. Bridge St. Owatonna, MN 55060</p>
+						<p class="text-detail">504 East Academy St. Owatonna, MN 55060</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
