--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/504+E+Academy+St,+Owatonna,+MN+55060/@44.0817073,-93.2179275,17z/data=!3m1!4b1!4m5!3m4!1s0x87f6e707aaeb3bb1:0xfa3c5ebb6facc2f0!8m2!3d44.0817035!4d-93.2157335">
+		<a href="https://www.google.com/maps/place/Owatonna,+MN+55060/@44.1018635,-93.3013923,12z/data=!3m1!4b1!4m5!3m4!1s0x87f6e64460fe90e3:0x16bca3037e40803b!8m2!3d44.0855572!4d-93.2259349">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">504 East Academy St. Owatonna, MN 55060</p>
+						<p class="text-detail">Owatonna, MN 55060</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
